syntax = "proto3";
package rusk;
option go_package = "github.com/dusk-network/rusk-schema;rusk";

message SecretKey {
    bytes a = 1; // JubJubScalar
    bytes b = 2; // JubJubScalar
}

message ViewKey {
    bytes a = 1; // JubJubScalar
    bytes b_g = 2; // JubJubCompressed, B = b * G
}

message PublicKey {
    bytes a_g = 1; // JubJubCompressed, A = a * G
    bytes b_g = 2; // JubJubCompressed, B = b * G
}

message StealthAddress {
    bytes r_g = 1; // JubJubCompressed, R = r * G
    bytes pk_r = 2; // JubJubCompressed
}

message GenerateKeysRequest {}

message GenerateKeysResponse {
    SecretKey sk = 1;
    ViewKey vk = 2;
    PublicKey pk = 3;
}

service Keys {
    rpc GenerateKeys(GenerateKeysRequest) returns (GenerateKeysResponse) {}
    rpc GenerateStealthAddress(PublicKey) returns (StealthAddress) {}
}
